--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -2925,7 +2925,7 @@ a {
     color: #fff;
     transition: all 0.3s;
   }
-  .modal-content .modal-footer .btn-post:hover {
+  .modal-content .modal-footer .btn-post:not(:disabled):hover {
     background-color: transparent;
     color: @color_main;
   }
@@ -4941,6 +4941,11 @@ figure.avatar {
 .modal {
   overflow: inherit !important;
 }
+  .modal-dialog.modal-lg {
+    width: 100vw;
+    max-width: 100vw;
+    margin: 0px !important;
+  }
   .modal.fade .modal-dialog {
     transition: transform .3s ease-out;
     display: flex;
